# Editor

./: CMakeLists.txt  LICENSE  README.md
include/: camera.h  color_rect.h  editor.h  frame_event.h  glyph_texture.h  label.h  macros.h  math_utils.h  shader.h  texture.h  tween.h  utils.h
res/: glyph_vert.glsl  sprite_vert.glsl
src/: camera.cpp  color_rect.cpp  editor.cpp  glyph_texture.cpp  label.cpp  main.cpp  texture.cpp  tween.cpp
